tests/tools/checker/positive/structs_enums_functions.nv
enum TokenKind {
    KW_FN;
    IDENT;
    EOF;
}

struct Token {
    kind: TokenKind;
    lexeme: str;
    line: int;
    column: int;
}

fn make_token(kind: TokenKind, lexeme: str, line: int, column: int) : Token {
    return Token { kind: kind, lexeme: lexeme, line: line, column: column };
}

fn main() : void {
    return;
}
