tests/tools/checker/negative/duplicate_struct_field.nv
struct Point {
    x: int;
    x: int;
}

fn main() : void {
    return;
}
